feat(.logo): Création du dossier logo + affichage du logo

--- a/src/components/logo/logo.html
+++ b/src/components/logo/logo.html
@@ -1,18 +1,4 @@
-<!DOCTYPE html>
-<html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css"
-    />
-  </head>
-  <body>
-    <header><a href="./index.html" class="logo" title="logo"
+<a href="./index.html" class="logo" title="logo"
   ><svg
     width="150"
     height="38"
@@ -57,7 +43,3 @@
     </defs>
   </svg>
 </a>
-</header>
-
-  </body>
-</html>
