feat(.photographerLink) : Ajout et mise en forme du lien "Nos photographes" + header: grid;

--- a/src/base.scss
+++ b/src/base.scss
@@ -1,1 +1,12 @@
-
+// Fonts
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans&display=swap");
+// Colors
+$primary1: #901c1c;
+$primary2: #d3573c;
+$secondary1: #d3573c;
+$secondary2: #525252;
+$secondary3: #fafafa;
+$secondary4: #901c1c;
+// filters
+$filters: "#Portrait", "#Art", "#Fashion", "#Architecture", "#Travel", "#Sport",
+  "#Animals", "#Events";
