--- a/src/layouts/header/header.html
+++ b/src/layouts/header/header.html
@@ -1,1 +1,4 @@
-<header><%- include("../../components/logo/logo.html"); %></header>
+<header>
+  <%- include("../../components/logo/logo.html"); %>
+  <a href="#" class="photographerLink">Nos photographes</a>
+</header>
