--- a/src/base.scss
+++ b/src/base.scss
@@ -1,5 +1,6 @@
 // Fonts
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans&display=swap");
+
 // Colors
 $primary1: #901c1c;
 $primary2: #d3573c;
@@ -7,6 +8,16 @@ $secondary1: #d3573c;
 $secondary2: #525252;
 $secondary3: #fafafa;
 $secondary4: #901c1c;
-// filters
-$filters: "#Portrait", "#Art", "#Fashion", "#Architecture", "#Travel", "#Sport",
-  "#Animals", "#Events";
+
+$desktop: 992px;
+
+// Lists
+$filters: "Portrait", "Art", "Fashion", "Architecture", "Travel", "Sport",
+  "Animals", "Events";
+
+// Mixins
+@mixin desktop {
+  @media screen and (min-width: $desktop) {
+    @content;
+  }
+}
