--- a/src/components/filterLink/filterLink.scss
+++ b/src/components/filterLink/filterLink.scss
@@ -1,12 +1,14 @@
 .filterLink {
-  border-radius: 11px;
+  border-radius: 0.6875rem;
   border: 0.5px solid #c4c4c4;
-  padding: 2px 6.1px;
-  max-height: 22px;
-  margin: 3px 2.5px;
+  padding: 0.125rem 0.375rem;
+  margin: 0 0.125rem;
   &:hover,
   &:focus {
     color: white;
     background-color: $primary1;
+  }
+  @include desktop {
+    margin: 0.125rem;
   }
 }
