--- a/src/components/logo/logo.scss
+++ b/src/components/logo/logo.scss
@@ -1,6 +1,14 @@
 .logo {
   display: flex;
   align-items: center;
-  margin-left: 20px;
+  margin-left: 1.25rem;
   grid-area: logo;
+  @include desktop {
+    svg {
+      width: 200px;
+      height: 50px;
+      fill: none;
+    }
+    margin-left: 6.25rem;
+  }
 }
