--- a/src/components/logo/logo.scss
+++ b/src/components/logo/logo.scss
@@ -5,7 +5,7 @@
   margin-left: 1.25rem;
   @include desktop {
     margin-left: 6.25rem;
-    svg {
+    img {
       fill: none;
       height: 50px;
       width: 200px;
