feat(.photographerMain): Version mobile terminé

--- a/src/layouts/article/article.html
+++ b/src/layouts/article/article.html
@@ -1,5 +1,5 @@
 <article>
-  <button class="linkContainer">
+  <button class="linkContainer" onclick="document.location.href='photographer.html'">
     <div class="imgContainer">
       <img src="<%- imgLink %>" class="<%- className %>" alt="" cover />
     </div>
