--- a/src/components/logo/logo.html
+++ b/src/components/logo/logo.html
@@ -1,3 +1,3 @@
-<button class="logo" title="logo">
-    <img src="./img/logo/logo.svg" alt="logo">
+<button class="logo" title="logo" onclick="document.location.href='index.html'">
+    <img src=" ./img/logo/logo.svg" alt="logo">
 </button>
