feat(photgrapher.html): Création btContactMobile + change organisation fichiers + reglages gulpfile

--- a/src/pages/index/layouts/article/article.html
+++ b/src/pages/index/layouts/article/article.html
@@ -19,9 +19,9 @@
     <%- price %>
   </p>
   <nav>
-    <%- include("../../components/filterLink/filterLink.html",{ nom: "Portrait" }); %>
-      <%- include("../../components/filterLink/filterLink.html",{ nom: "Event" }); %>
-        <%- include("../../components/filterLink/filterLink.html",{ nom: "Travel" }); %>
-          <%- include("../../components/filterLink/filterLink.html",{ nom: "Animals" }); %>
+    <%- include("../../../../components/filterLink/filterLink.html",{ nom: "Portrait" }); %>
+      <%- include("../../../../components/filterLink/filterLink.html",{ nom: "Event" }); %>
+        <%- include("../../../../components/filterLink/filterLink.html",{ nom: "Travel" }); %>
+          <%- include("../../../../components/filterLink/filterLink.html",{ nom: "Animals" }); %>
   </nav>
 </article>
