--- a/src/components/logo/logo.scss
+++ b/src/components/logo/logo.scss
@@ -3,6 +3,7 @@
   display: flex;
   grid-area: logo;
   margin-left: 1.25rem;
+  height: 109px;
   @include desktop {
     margin-left: 6.25rem;
     img {
