--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -2,3 +2,32 @@ html {
   display: flex;
   justify-content: center;
 }
+header {
+  display: grid;
+  grid-template-areas: "logo p" "nav nav";
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 6.8125rem 3.125rem;
+  margin-bottom: 2.8125rem;
+  @include desktop {
+    grid-template-areas: "logo nav p";
+    grid-template-columns: auto;
+    grid-template-rows: 8.25rem;
+    margin-bottom: 4.5rem;
+  }
+  .photographerLink {
+    align-items: center;
+    display: flex;
+    font-size: 0.875rem;
+    grid-area: p;
+    justify-content: flex-end;
+    margin-right: 1.38rem;
+    @include desktop {
+      font-size: 2.25rem;
+      margin-right: 7.3rem;
+    }
+  }
+}
+main {
+  display: flex;
+  flex-wrap: wrap;
+}
