fix(btContactMobile): Positionnement du bt lors de l'ajout de body: max-width: 1440px

--- a/src/base.scss
+++ b/src/base.scss
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans&display=swap");
 
+html {
+  display: flex;
+  justify-content: center;
+}
 body {
   font-family: DM Sans, sans-serif;
   max-width: 1440px;
