fix(photographerSection): ajout du bt aux img

--- a/src/pages/photographer/layouts/photographerSection/photographerSection.html
+++ b/src/pages/photographer/layouts/photographerSection/photographerSection.html
@@ -1,7 +1,7 @@
 <section class="photographerSection">
-    <div class="imgContainer">
+    <button class="imgContainer" onclick="openLightbox()">
         <img class="<%- className %>" src="<%- imgLink %>" alt="" cover>
-    </div>
+    </button>
     <div class="infoContainer">
         <p class="imgTitle">
             <%- imgTitle %>
