--- a/src/pages/index/layouts/indexNav/indexNav.html
+++ b/src/pages/index/layouts/indexNav/indexNav.html
@@ -1,4 +1,4 @@
-<nav>
+<nav class="indexNav">
   <%- include("../../../../components/filterLink/filterLink.html",{ nom: "Portrait" }); %>
     <%- include("../../../../components/filterLink/filterLink.html",{ nom: "Art" }); %>
       <%- include("../../../../components/filterLink/filterLink.html",{ nom: "Fashion" }); %>
