--- a/src/components/logo/logo.scss
+++ b/src/components/logo/logo.scss
@@ -2,10 +2,9 @@
   align-items: center;
   display: flex;
   grid-area: logo;
-  margin-left: 1.25rem;
   height: 109px;
   @include desktop {
-    margin-left: 6.25rem;
+    height: 137px;
     img {
       fill: none;
       height: 50px;
