--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -8,13 +8,21 @@ header {
   grid-template-columns: 50% 50%;
   grid-template-rows: 6.8125rem 3.125rem;
   margin-bottom: 2.8125rem;
+  .logo {
+    margin-left: 1.38rem;
+  }
   @include desktop {
     grid-template-areas: "logo nav p";
     grid-template-columns: auto;
     grid-template-rows: 8.25rem;
     margin-bottom: 4.5rem;
+    .logo {
+      margin-left: 7.3rem;
+      height: 100%;
+    }
   }
-  .photographerLink {
+
+  .photographersLink {
     align-items: center;
     display: flex;
     font-size: 0.875rem;
