--- a/src/pages/photographer/layouts/photographerArticle/photographerArticle.html
+++ b/src/pages/photographer/layouts/photographerArticle/photographerArticle.html
@@ -8,19 +8,20 @@
       <%- nom %>
     </h2>
   </div>
-  <p class="location">
-    <%- location %>
-  </p>
-  <p class="tagline">
-    <%- tagline %>
-  </p>
-  <p class="price">
-    <%- price %>
-  </p>
-  <nav class="photographerNav">
-    <%- include("../../../../components/filterLink/filterLink.html",{ nom: "portrait" }); %>
-      <%- include("../../../../components/filterLink/filterLink.html",{ nom: "events" }); %>
-        <%- include("../../../../components/filterLink/filterLink.html",{ nom: "travel" }); %>
-          <%- include("../../../../components/filterLink/filterLink.html",{ nom: "animals" }); %>
-  </nav>
+  <%- include("../../../../components/btContact/btContact.html", { className:"btContact btContact-desktop"}) %>
+    <p class="location">
+      <%- location %>
+    </p>
+    <p class="tagline">
+      <%- tagline %>
+    </p>
+    <p class="price">
+      <%- price %>
+    </p>
+    <nav class="photographerNav">
+      <%- include("../../../../components/filterLink/filterLink.html",{ nom: "portrait" }); %>
+        <%- include("../../../../components/filterLink/filterLink.html",{ nom: "events" }); %>
+          <%- include("../../../../components/filterLink/filterLink.html",{ nom: "travel" }); %>
+            <%- include("../../../../components/filterLink/filterLink.html",{ nom: "animals" }); %>
+    </nav>
 </article>
