--- a/src/components/mediaCard/mediaCard.html
+++ b/src/components/mediaCard/mediaCard.html
@@ -1,4 +1,4 @@
-<section class="photographerSection">
+<section class="mediaCard">
     <button class="imgContainer" onclick="openLightbox()">
         <img class="<%- className %>" src="<%- imgLink %>" alt="" cover>
     </button>
