--- a/src/components/mediaCard/mediaCard.scss
+++ b/src/components/mediaCard/mediaCard.scss
@@ -1,4 +1,4 @@
-.photographerSection {
+.mediaCard {
 	flex: 1 0 25%;
 	display: flex;
 	flex-direction: column;
@@ -10,7 +10,8 @@
 		width: 350px;
 		min-width: 350px;
 		max-width: 350px;
-		margin-right: 6.47%;
+		margin-right: 3.25%;
+		margin-left: 3.25%;
 	}
 
 	.imgContainer {
@@ -20,7 +21,7 @@
 		overflow: hidden;
 		border-radius: 5px;
 		@include desktop {
-			height: 300px;
+			height: 18.75rem;
 		}
 
 		img {
@@ -50,12 +51,12 @@
 		}
 		.imgTitle {
 			@include desktop {
-				font-size: 24px;
+				font-size: 1.5rem;
 			}
 		}
 		.like {
 			@include desktop {
-				font-size: 16px;
+				font-size: 1rem;
 			}
 		}
 
@@ -66,7 +67,7 @@
 			margin-left: 0.3125rem;
 			font-size: 0.6875rem;
 			@include desktop {
-				font-size: 18px;
+				font-size: 1.125rem;
 			}
 		}
 	}
