--- a/src/components/photographerDescription-photographer/photographerDescription-photographer.html
+++ b/src/components/photographerDescription-photographer/photographerDescription-photographer.html
@@ -22,5 +22,6 @@
         <%- include("../filterLink/filterLink.html",{ nom: "travel" }); %>
           <%- include("../filterLink/filterLink.html",{ nom: "animals" }); %>
   </nav>
-  <%- include("../btContact/btContact.html", { className:"btContact btContact-desktop", text:"Contactez moi"}) %>
+  <%- include("../btContact/btContact.html", { className:"btContact btContact-desktop", type: "button"
+    ,text: "Contactez moi" }) %>
 </article>
