--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,4 +1,4 @@
-header {
+.header {
 	display: grid;
 	grid-template-areas: "logo p" "nav nav";
 	grid-template-columns: 50% 50%;
@@ -15,6 +15,7 @@ header {
 		margin-left: 2.8125rem;
 		margin-right: 2.8125rem;
 	}
+
 	.logo {
 		@include desktop {
 			height: 100%;
@@ -50,28 +51,11 @@ header {
 			align-content: center;
 			margin: 0;
 		}
-		.filterLink {
-			border: 0.5px solid #c4c4c4;
-			border-radius: 0.6875rem;
-			margin: 0 0.125rem;
-			padding: 0.125rem 0.375rem;
-			&:focus,
-			&:hover {
-				background-color: $primary1;
-				color: #fff;
-			}
-			@include desktop {
-				margin: 0.125rem;
-			}
-		}
 	}
-}
-
-.header-photographer {
-	grid-template-rows: 6.8125rem 0;
-	margin-bottom: 0;
-	.photographersLink,
-	nav {
-		display: none;
+	&-photographer {
+		.photographersLink,
+		nav {
+			display: none;
+		}
 	}
 }
