feat(appJS): Affichage de chaque carte de photographe dans le views.photographer en fonction du clic sur la carte du views.lobby

--- a/src/components/photographer-card-big/photographer-card-big.html
+++ b/src/components/photographer-card-big/photographer-card-big.html
@@ -1,7 +1,7 @@
 <article class="<%- articleClassName %>">
 
   <div class="photographer-card-link-imgContainer photographer-card-big-imgContainer">
-    <img src="<%- imgLink %>" class="<%- photoClassName %>" alt="" cover />
+    <img src="<%- imgLink %>" alt="" cover />
   </div>
 
   <h2>
