--- a/src/pages/photographer.scss
+++ b/src/pages/photographer.scss
@@ -1,9 +1,9 @@
-#mediaCardsSection {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-wrap: wrap;
-	@include desktop {
-		width: 106.59%;
-	}
-}
+// #mediaCardsSection {
+// 	display: flex;
+// 	align-items: center;
+// 	justify-content: center;
+// 	flex-wrap: wrap;
+// 	@include desktop {
+// 		width: 106.59%;
+// 	}
+// }
