feat(JS): Tags fonctionnels :-)

--- a/src/base.scss
+++ b/src/base.scss
@@ -9,7 +9,8 @@ body {
 	max-width: 90rem;
 	width: 100%;
 
-	button {
+	button,
+	span {
 		background-color: transparent;
 		border: 0;
 		color: #901c1c;
