--- a/src/components/tags/tags.scss
+++ b/src/components/tags/tags.scss
@@ -6,7 +6,7 @@
 	cursor: default;
 	&-link {
 		cursor: pointer;
-		&:focus,
+		&[isChecked="true"],
 		&:hover {
 			background-color: $primary1;
 			color: #fff;
