--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -2,7 +2,7 @@
   <button class="logo" title="logo" alt="Fisheye Home Page">
     <img src=" ./img/logo/logo.svg" alt="logo">
   </button>
-  <button href="#" class="photographersLink">Nos photographes</button>
+  <h1 class="lobbyH1">Nos photographes</h1>
   <nav>
     <button href="#" class="tags tags-link">#Art</button>
     <button href="#" class="tags tags-link">#Fashion</button>
