--- a/src/components/btContact/btContact.html
+++ b/src/components/btContact/btContact.html
@@ -1,3 +1,3 @@
-<button class="<%- className %>" type="<%- type %>">
-    <%- text %>
+<button class=<%- className %> type=<%- type %>>
+        <%- text %>
 </button>
