feat(mediaCardsSection): section affiché + incrementLike()

--- a/src/components/mediaCard/mediaCard.html
+++ b/src/components/mediaCard/mediaCard.html
@@ -1,4 +1,4 @@
-<section class="mediaCard">
+<article class="mediaCard">
     <button class="imgContainer" onclick="openLightbox()">
         <img class="<%- className %>" src="<%- imgLink %>" alt="" cover>
     </button>
@@ -6,9 +6,8 @@
         <p class="imgTitle">
             <%- imgTitle %>
         </p>
-
-        <p class="like">
+        <button class="like">
             <%- like %>
-        </p>
+        </button>
     </div>
-</section>
+</article>
